# dreamteam-agent-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  dreamteam.config.example.json  dreamteam.config.minimal.json  pyproject.toml
.claude-plugin/: marketplace.json
.dreamteam-bootstrap/: apply-00.sh  apply-01.sh  apply-02.sh  apply-03.sh  apply-04.sh  apply-05.sh  part-00  part-01  part-02  part-03  part-04
core/: README.md
docs/: architecture.md  benchmark-methodology.md  best-practices-review.md  compact-communication.md  creating-an-adapter.md  metrics.md  migration-0.1-to-0.2.md  prompt-engineering.md  token-optimization.md  v0.2-design.md  v0.3-design.md  v0.4-design.md  v0.4-implementation-plan.md  v0.4-stabilization-plan.md  v0.4.1-implementation-plan.md  v0.4.5-stability-candidate.md  worker-design.md
dreamteam/: __init__.py  anchors.py  benchmark.py  operations.py  pricing.py
examples/: boilerplate-generation.md  compact-handoff.md  failure-triage.md  migration-workflow.md  repository-exploration.md  test-generation.md
scripts/: build_release.py  install_claude_standalone.py  measure.py  measure_v03.py  protocol_v2.py  smoke_plugin_artifact.py  sync_claude_adapter.py  validate.py
tests/: standalone_fixture.py  test_anchors_v03.py  test_benchmark_v03.py  test_benchmark_v04.py  test_claude_standalone_hook_mutation.py  test_claude_standalone_hook_ownership.py  test_claude_standalone_install.py  test_claude_standalone_scope.py  test_config_v03.py  test_config_v04.py  test_hooks_v03.py  (+20 more)
(+142 files in other folders)
